# qregress

./: .gitattributes  .gitignore  5qubit_mean_encoder.xlsx  BSE16qubit_mean_encoder.xlsx  BSE5qubit_mean_encoder.xlsx  Classical.ipynb  Classical.py  Dockerfile  Quantum.ipynb  README.md  Untitled.ipynb  ansatz.json  check.out  check_dir_loss.ipynb  check_function_fitting_variance.ipynb  check_iter_loss.ipynb  check_results.ipynb  check_results_old.ipynb  circuit_drawings.ipynb  circuit_drawings.py  classical.py  classical_vs_quantum.ipynb  cleanuphelp.sh  cli_classical.py  datadirs.sh  debug.ipynb  encoders.json  environment.yml  gj.txt  main.py  min_requirements.txt  model_log.csv  parallel_submit.ipynb  pyproject.toml  requirements.txt  requirements_viki.txt  run_docker.sh  scores.json  settings.py  simplified.ipynb  (+6 more)
BSE-calc-test/: check_results.ipynb  checkall.sh  checkiters.ipynb  run.sh
BSE5_real/: Untitled.ipynb  min_ex.ipynb  min_ex.py  pytorch_test.ipynb  pytorch_test.py  trash.ipynb
BSE_RUD_AL_test/: BSE16_circuit_depth_vs_accuracy.ipynb  BSE5_circuit_depth_vs_accuracy.ipynb
BSE_learning_curves/: check_lc_results.ipynb  plot_BSE5.ipynb
PennylaneQASM/: pennylanetoqasmtoqiskit.ipynb  settings.py
Pennylane_to_Qiskit/: A2_HWE-CNOT_predicted_values.csv  A2_HWE-CNOT_results.json  IQP_Full-Pauli-CRZ_predicted_values.csv  IQP_Full-Pauli-CRZ_results.json  convert.ipynb  convert_ML.ipynb  convert_ML.py  convert_ML_IBM.ipynb  convert_ML_SPSA.ipynb  convert_ML_SPSA.py  convert_ML_batched.ipynb  convert_ML_batched.py  error.txt  final_state_model.bin.npz  jobs_0.txt  model_log.csv  partial_state_model.bin.npz  pennylane_qiskit_sessions.ipynb  serverless.ipynb  serverless.py  upload_serverless.ipynb  variational-quantum-eigensolver.ipynb  view_combined.py  xgboost.ipynb
circuit_visualization/: 5BSE_circuit_depth_vs_accuracy.ipynb  BSE16_all.ipynb  BSE5_all.ipynb  BSE5_circuit_depth_vs_accuracy.ipynb  DDCC5_all.ipynb  circuit_drawings.ipynb  circuit_visualization.ipynb  kill_list.txt  linear_circuit_depth_vs_accuracy.ipynb  quadratic_circuit_depth_vs_accuracy.ipynb  sine_circuit_depth_vs_accuracy.ipynb
classical_testing/: BSE_run.ipynb  SHAP.ipynb  best.xlsx  classical_function_fitting.ipynb  datasplit.ipynb  mol_reps.ipynb  scores.json  trashA.xyz
database/: Calculator.py  Processing.py  TRASH.xyz  featurize.py  mol_reps.ipynb  pre-process.py  pre_process.py
debug/: A2_HWE-CNOT_results.json  debug.ipynb  dummy.ipynb  ibm_pennylane.ipynb  min_ex.ipynb  pytorch.py  run.sh  runtest.sh
dockerhelp/: docker_jupyter.md
earlystopping/: IQP_Full-Pauli-CRX.out  checkcode.ipynb  (+4 more)
(+29445 files in other folders)
