[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qregress"
version = "0.0.1"
authors = [
 { name = "Grier M. Jones", email = "grier.jones@utoronto.ca" },
 { name = "Nick Taylor"},
 { name = "Viki Kumar Prasad"},
 { name = "Ulrich Fekl"},
 { name = "Hans-Arno Jacobsen" , email = "jacobsen@eecg.toronto.ca"}

]

license = { file = "LICENSE" }
description = "UPDATE"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]


[tool.setuptools.packages.find]
where = ["src"]
include = ["qregress*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.scripts]
classical = "qregress.scripts.Classical:run"
cli-classical = "qregress.scripts.cli_classical:run"
qregressrun = "qregress.scripts.qregressrun:run"
settings = "qregress.scripts.settings:run"

[project.urls]
Homepage = "https://github.com/MSRG/qregress"
